Fix: 게시글 삭제 에러 수정

--- a/docs/트러블슈팅일지(게시판).md
+++ b/docs/트러블슈팅일지(게시판).md
@@ -38,3 +38,129 @@
 3. **결과**: 타입 오류가 해결되고, `NewsCard` 컴포넌트가 정상적으로 작동함.
 
 이러한 해결 과정을 통해 각 문제를 단계별로 분석하고 수정하여, 최종적으로 모든 기능이 정상적으로 작동하도록 개선하였습니다. 추가적인 질문이나 수정이 필요하시면 언제든지 말씀해 주세요.
+
+
+Next.js 15 업그레이드 관련 오류들과 해결 방법을 정리해드리겠습니다.
+
+# Next.js 15 업그레이드 관련 오류 해결 기록
+
+## 1. params 비동기 처리 관련 오류
+
+### 문제 상황
+- Next.js 15에서 params가 동기식에서 비동기식으로 변경됨
+- 기존 코드에서 params를 동기적으로 접근하여 오류 발생
+
+### 해결 방법
+1. `useParams` 훅 사용으로 변경
+```typescript
+// 변경 전
+export default function EditPage({ params }: { params: { postId: string } }) {
+  // ...
+}
+
+// 변경 후
+export default function EditPage() {
+  const params = useParams();
+  const postId = params.postId as string;
+  // ...
+}
+```
+
+2. 데이터 페칭 로직 수정
+```typescript
+useEffect(() => {
+  const fetchPost = async () => {
+    try {
+      const response = await fetch(`/api/posts/${postId}`);
+      if (!response.ok) {
+        const errorData = await response.json();
+        throw new Error(errorData.error || '게시글을 불러오는데 실패했습니다.');
+      }
+      const fetchedPost = await response.json();
+      setPost(fetchedPost);
+    } catch (error) {
+      // 에러 처리
+    }
+  };
+
+  if (postId) {
+    fetchPost();
+  }
+}, [postId, router]);
+```
+
+## 2. 타입 관련 오류들
+
+### 문제 상황
+- `author` 속성의 타입 불일치
+- `postId` 타입이 string | string[] | undefined로 추론되는 문제
+- `createdAt` 날짜 처리 오류
+
+### 해결 방법
+1. author 타입 처리
+```typescript
+<span>{typeof post.author === 'string' ? post.author : post.author?.name || '익명'}</span>
+```
+
+2. postId 타입 단언
+```typescript
+const postId = params.postId as string;
+```
+
+3. createdAt 날짜 변환
+```typescript
+new Date(post.createdAt).toLocaleDateString()
+```
+
+## 3. API 라우트 처리
+
+### 문제 상황
+- 개발 환경에서 사용자 검증 오류
+- API 응답 형식 불일치
+
+### 해결 방법
+1. 개발 환경 사용자 처리
+```typescript
+// 개발 환경에서 임시 사용자 생성
+if (!user && process.env.NODE_ENV === 'development') {
+  user = await prisma.user.create({
+    data: {
+      id: payload.authorId,
+      name: '임시 사용자',
+      email: 'temp@example.com',
+    }
+  });
+}
+```
+
+2. API 응답 형식 통일
+```typescript
+return NextResponse.json({ success: true, data: post });
+```
+
+## 4. 컴포넌트 마운트 관련
+
+### 문제 상황
+- React hydration 오류
+- HTML 중첩 문제
+
+### 해결 방법
+1. 'use client' 지시어 위치 조정
+2. 컴포넌트 초기 상태 관리 개선
+3. 조건부 렌더링 로직 수정
+
+## 향후 고려사항
+
+1. **성능 최적화**
+   - 불필요한 리렌더링 최소화
+   - 데이터 캐싱 전략 수립
+
+2. **에러 처리 강화**
+   - 사용자 친화적인 에러 메시지
+   - 전역 에러 바운더리 구현
+
+3. **타입 안정성**
+   - 공통 타입 정의 개선
+   - API 응답 타입 체계화
+
+이러한 변경사항들은 Next.js 15의 새로운 기능과 변경사항을 고려하여 적용되었으며, 앱의 안정성과 유지보수성을 향상시켰습니다.
