Fix: 게시글 삭제 에러 해결과정 기록

--- a/docs/트러블슈팅일지(게시판).md
+++ b/docs/트러블슈팅일지(게시판).md
@@ -164,3 +164,85 @@ return NextResponse.json({ success: true, data: post });
    - API 응답 타입 체계화
 
 이러한 변경사항들은 Next.js 15의 새로운 기능과 변경사항을 고려하여 적용되었으며, 앱의 안정성과 유지보수성을 향상시켰습니다.
+
+
+# 게시글 삭제시 발생했던 오류
+
+## 1. 문제 상황
+- 게시글 삭제 시 "게시글을 찾을 수 없습니다." 오류 메시지가 발생
+- DELETE API 요청이 404 상태코드를 반환
+
+## 2. 원인 분석
+1. API 라우트 핸들러에서 게시글 존재 여부 확인 로직이 미흡
+2. 삭제 요청 시 에러 처리가 불충분
+3. 클라이언트에서 서버 응답 처리가 미흡
+
+## 3. 해결 과정
+
+### 3.1 API 라우트 핸들러 개선
+`src/app/api/posts/[postId]/route.ts` 파일에서:
+
+1. 게시글 존재 여부 확인 로직 추가
+```typescript
+// 게시글 존재 여부 확인
+const post = await prisma.post.findUnique({
+  where: { id: postId },
+});
+
+if (!post) {
+  return NextResponse.json(
+    { error: '게시글을 찾을 수 없습니다.' },
+    { status: 404 }
+  );
+}
+```
+
+2. 에러 처리 개선
+```typescript
+try {
+  // 게시글 삭제
+  await prisma.post.delete({
+    where: { id: postId },
+  });
+
+  return NextResponse.json({ 
+    success: true,
+    message: '게시글이 삭제되었습니다.' 
+  });
+} catch (error) {
+  console.error('Failed to delete post:', error);
+  
+  // Prisma 에러 처리
+  if (error instanceof Error) {
+    if (error.message.includes('Record to delete does not exist')) {
+      return NextResponse.json(
+        { error: '게시글을 찾을 수 없습니다.' },
+        { status: 404 }
+      );
+    }
+  }
+  
+  return NextResponse.json(
+    { error: '게시글 삭제에 실패했습니다.' },
+    { status: 500 }
+  );
+}
+```
+
+### 3.2 개선된 기능
+1. 게시글 존재 여부를 먼저 확인하여 불필요한 삭제 시도 방지
+2. 구체적인 에러 메시지 제공으로 디버깅 용이성 향상
+3. HTTP 상태 코드의 적절한 사용으로 클라이언트 측 에러 처리 개선
+4. 성공/실패 시 명확한 메시지 전달
+
+## 4. 결과
+- 게시글이 존재하지 않을 때 적절한 404 응답 반환
+- 삭제 성공 시 명확한 성공 메시지 전달
+- 서버 에러 발생 시 구체적인 에러 메시지 제공
+
+## 5. 교훈
+1. API 엔드포인트 설계 시 데이터 존재 여부 확인이 중요
+2. 구체적인 에러 처리와 메시지가 디버깅에 도움
+3. 적절한 HTTP 상태 코드 사용이 클라이언트-서버 통신에 중요
+
+이러한 개선을 통해 게시글 삭제 기능의 안정성과 사용자 경험이 향상되었습니다.
